2016-02-20  Benno Schulenberg  <bensberg@justemail.net>
	* src/search.c (get_history_completion): Avoid leaking memory
	when tabbing on a string that does not occur in the history.
	This fixes Savannah bug #47124 reported by Mike Frysinger.
	* src/files.c (input_tab): Parse a character in the correct
	buffer.  This fixes Savannah bug #47199.
	* src/prompt.c (do_statusbar_output): Reduce an allocation to what
	is actually needed.  This undoes the papering-over of above bug.

2016-02-18  Benno Schulenberg  <bensberg@justemail.net>
	* src/search.c (do_replace_loop), src/text.c (do_int_spell_fix),
	src/winio.c (edit_refresh): Fix Savannah bug #47127 the proper way.
	* src/nano.c (free_filestruct): Allow the parameter to be NULL.
	* src/search.c (search_init): Delete a debugging leftover.

2016-02-16  Benno Schulenberg  <bensberg@justemail.net>
	* src/files.c (initialize_buffer_text): Delete redundant assignment.

2016-02-15  Benno Schulenberg  <bensberg@justemail.net>
	* src/files.c (read_file): Free not just the struct but also the
	data it contains, and also when it is the first and only line.
	This fixes Savannah bug #47153 reported by Mike Frysinger.
	* src/files.c (get_full_path): Avoid losing a buffer when getcwd()
	fails. 	This fixes Savannah bug #47129 reported by Mike Frysinger.

2016-02-14  Benno Schulenberg  <bensberg@justemail.net>
	* src/search.c (do_replace_loop): Make iterating through replacement
	matches behave again like iterating through search matches: showing
	them centered when found offscreen.  This fixes Savannah bug #47127.
	* src/text.c (do_int_spell_fix): Restore the above behavior also for
	the internal spell fixer.
	* src/prompt.c (do_statusbar_input, do_statusbar_verbatim_input,
	do_statusbar_output): Do the copying from input to output just once.
	* src/prompt.c (do_statusbar_output): Rename and condense some stuff,
	and correct the main comment: filtering means allow_cntrls==FALSE.