@@ -1,3 +1,7 @@
+2016-02-21  Benno Schulenberg  <bensberg@justemail.net>
+	* src/files.c (input_tab): If the first Tab added the part that all
+	matches have in common, don't require a third Tab to show the list.
+
 2016-02-20  Benno Schulenberg  <bensberg@justemail.net>
 	* src/search.c (get_history_completion): Avoid leaking memory
 	when tabbing on a string that does not occur in the history.
